2022-04-06  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Additional tests and updated changes
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* man/Message-class.Rd: Idem
	* inst/tinytest/test_message.R: Idem

2022-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Correct minor issue, reenable compilation
	* inst/tinytest/test_message.R: Park one test temporarily

2022-04-04  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Expose TextFormat for Message->character conversion
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* src/wrapper_Message.cpp: Idem
	* src/init.c: Idem
	* man/Message-class.Rd: Idem
	* inst/tinytest/test_message.R: Idem

2022-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/internals.R (getProtobufLibVersion): If formatted result, return
	as 'package_version()' rather than just string; update .Call()

	* R/zzz.R (.onAttach): In interactive mode disply package and
	underlying library version on startup

2022-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description, SystemRequirements): Updated to state that
	version 3.3.0 from March 2017 or later is now needed

2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.18

	* man/*Rd: Update a number of URLs

2021-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date

	* src/Makevars.ucrt: Applied patch by Tomas Kalibera that is part of
	his changes for the Windows utf8-enhabced ucrt3 builds of R 4.2.0

2021-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update JSS article url to doi form per JSS request,
	switch to shorter https://doi.org/ base

2021-10-01  Dirk Eddelbuettel  <edd@debian.org>

 	* .github/workflows/docker.yaml (on): Restrict Docker rebuilds to
	pushes to master branch
